<resources>
    <string name="app_name">Hohoda</string>
    <string name="facebook_app_id">1601778370150664</string>
    <string name="nav_menu_item_dashboard">Dashboard</string>
    <string name="nav_menu_item_notifications">Notifications</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="nav_menu_item_browse_course">Browse Courses</string>
    <string name="nav_menu_item_browse_student">Browse Tutors</string>
    <string name="nav_menu_item_my_course">My Courses</string>
    <string name="nav_menu_item_post_course">Post a Course</string>
    <string name="nav_menu_item_setting">Settings</string>
    <string name="nav_menu_item_sign_out">Sign Out</string>
    <string name="title_activity_sign_in_up">SignInUpActivity</string>
    <string name="label_hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">Forgot  password?</string>
    <string name="label_button_sign_in">Sign in</string>
    <string name="text_dont_have_account">You don\'t have a account?</string>
    <string name="hint_email">Email</string>
    <string name="label_hint_only_user_name">Username</string>
    <string name="label_button_create_account">Create account</string>
    <string name="registering">Registering...</string>
    <string name="verify_code_title">Sign Up</string>
    <string name="enter_verify_code_prompt">Enter Your Verification Code</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_error">Error</string>
    <string name="label_network_error">Network problem: Please check the Internet connection between device and application</string>
    <string name="validating_otp">Validating OTP code...</string>
    <string name="signing_in">Login...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="label_full_name">Full name</string>
    <string name="label_address">ADDRESS (Optional)</string>
    <string name="label_university">University</string>
    <string name="label_phone">Phone</string>
    <string name="label_summary">Summary</string>
    <string name="label_interested_subject">Interested Subject</string>
    <string name="label_skills">Skills</string>
    <string name="page_title_tab_summary">Summary</string>
    <string name="page_title_tab_reviews">Reviews</string>
    <string name="no_results_found">No results found</string>
    <string name="label_age">Age</string>
    <string name="label_gender">Gender</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="unit_duration_array">
        <item>/ Month</item>
        <item>/ Course</item>
    </string-array>
    <string name="title_activity_post_course">PostCourseActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title">TITLE</string>
    <string name="label_post_course_activity">Post a course</string>
    <string name="hint_title">What do you want?</string>
    <string name="label_tag">TAG</string>
    <string name="hint_tag">Ex: Math</string>
    <string name="label_price">PRICE (.000 VND)</string>

    <string name="label_duration">DURATION</string>
    <string name="label_per">Per</string>
    <string name="label_start_date">START DATE (Optional)</string>
    <string name="hint_address">Where is your course at?</string>
    <string name="label_description">DESCRIPTION (Optional)</string>
    <string name="hint_description">This helps tutors or students pick your course accurately</string>
    <string name="action_next">Next</string>
    <string name="title_activity_post_course_scroll">PostCourseScrollActivity</string>
    <string name="label_schedule">SCHEDULE (Optional)</string>
    <string name="posting_mess">Posting...</string>
    <string name="toast_post_course_success">You have just posted a course successfully</string>
    <string name="my_course_posted">POSTED</string>
    <string name="my_course_joined">JOINED</string>
    <string name="page_title_my_interest">MY INTEREST</string>
    <string name="page_title_latest_course">LATEST</string>
    <string name="page_title_local_course">LOCAL</string>
    <string name="local_course_not_available">Local course is only available with users who has address in their information</string>
    <string name="local_tutor_not_available">Local tutor is only available with users who has address in their information</string>
    <string name="loading">Loading...</string>
    <string name="alert_addphoto">Choose Avatar</string>
    <string name="updatting">Updatting...</string>
    <string name="toast_update_profile_success">You have just updated your profile successfully</string>
    <string name="course_detail_page_title">DETAILS</string>
    <string name="candidate_list_page_title">CANDIDATES</string>
    <string name="label_price_without_currency">Price</string>
    <string name="label_beginning_course">Beginning of course</string>
    <string name="hint_duration">The time your course will last or blank if it is unlimited</string>
    <string name="course_detail_activity">Course Detail</string>
    <string name="label_join">JOIN</string>
    <string name="start_chat_fail">Start chat fail</string>
    <string name="send_message_error">Sorry, your message haven\'t sent</string>
    <string name="nav_menu_item_messages">Messages</string>
    <string name="noti_content_post_course">posted a new course</string>
    <string name="noti_content_join_course">joined your course</string>
    <string name="action_search">Search</string>
    <string name="unjoining_course">Unjoining this course...</string>
    <string name="label_joining">Joining...</string>
    <string name="label_close_course">CLOSE</string>
    <string name="label_sign_up_hint">No account yet? Create one</string>
    <string name="hint_full_name">Full name</string>
    <string name="sign_up">Sign up</string>
    <string name="label_sign_in_hint">Already a member? Login</string>
    <string name="signing_up">Signing up...</string>
    <string name="field_required">This field is required</string>
    <string name="enter_interested_hashtag">Enter your interested subjects</string>
    <string name="label_review">Review</string>
    <string name="label_comments">Comment</string>
    <string name="hint_text_comment">Leave your comment</string>
    <string name="label_submit">Submit</string>
    <string name="comment_not_be_empty">Comment can not be empty</string>
    <string name="tks_for_review">Thank you for your review</string>
    <string name="page_title_latest_course_dashboard">LATEST COURSE</string>
    <string name="page_title_local_tutor_dashboard">LOCAL TUTOR</string>
    <string name="closing_course">Closing course...</string>
    <string name="login_with_facebook">Login with Facebook...</string>
    <string name="close_course_successfully">You have just closed the course successfully</string>
    <string name="unjoin_course_successfully">You have just unjoined the course successfully</string>
    <string name="join_course_successfully">You have just joined course successfully</string>
</resources>
