<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hodachop93.hohoda.fragment.PostCoursePageOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address"
            android:textSize="@dimen/font_size_large" />

        <AutoCompleteTextView
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:hint="@string/hint_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:text="@string/label_description"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/edt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:hint="@string/hint_description"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
