<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingRight="@dimen/_35sdp"
        android:paddingTop="@dimen/_20sdp">


        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/label_hint_user_name"
            android:padding="@dimen/edit_text_padding"
            android:singleLine="true"
            android:textSize="@dimen/font_size_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_transparent_button_gray_border"
            android:text="@string/label_button_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/md_purple_900"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/_6sdp"
            android:text="@string/label_forgot_password"
            android:textColor="@color/md_blue_900" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/edit_text_padding"
            android:text="@string/text_dont_have_account"
            android:textColor="@color/md_grey_900" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
