<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hodachop93.hohoda.fragment.PostCoursePageOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:id="@+id/tv_label_title"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:layout_marginTop="@dimen/field_margin_top"
            android:hint="@string/hint_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:text="@string/label_tag"
            android:id="@+id/tv_label_tag"
            android:textSize="@dimen/font_size_large" />

        <com.hodachop93.hohoda.view.HashTagEditText
            android:id="@+id/edt_hashtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hashtag_text_color="@color/colorPrimary" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>