<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_300sdp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/colorDivider"
            android:padding="@dimen/_10sdp"
            android:text="@string/label_review"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_small"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/label_comments"
            android:textAllCaps="true"
            android:textSize="@dimen/font_size_small" />

        <EditText
            android:id="@+id/edt_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_text_comment"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textSize="@dimen/font_size_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@color/md_grey_200"
                android:text="@string/label_cancel"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_green"
                android:text="@string/label_submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>