<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_price_without_currency" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_beginning_course" />

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_address" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_schedule" />

            <TextView
                android:id="@+id/tv_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>