<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_full_name" />

            <EditText
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_address" />

            <AutoCompleteTextView
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:imeOptions="actionDone"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_phone" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:padding="@dimen/edit_text_padding_wide"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_interested_subject" />

            <com.hodachop93.hohoda.view.HashTagEditText
                android:id="@+id/edt_interested_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:singleLine="false"
                app:hashtag_text_color="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_age" />

                <EditText
                    android:id="@+id/edt_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:inputType="number"
                    android:text="15"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gender" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:text="@string/label_summary"
            android:textAppearance="@style/TextAppearance.FontRobotoMedium"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/edt_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:enabled="false"
            android:imeOptions="actionDone"
            android:text="Good course"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>